# weatherwithyou

./: .env.example  .gitignore  PRD.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_weather_queries.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
src/weatherwithyou/: db.py  main.py  settings.py
src/weatherwithyou/api/routes/: weather.py  weather_routes.py
src/weatherwithyou/clients/: geocoding.py  google_maps.py  pun.py  weather.py  weather_client.py  youtube.py
src/weatherwithyou/models/: weather_query.py
src/weatherwithyou/schemas/: weather.py  weather_schemas.py
src/weatherwithyou/services/: weather_service.py
tests/: conftest.py
tests/api/: test_weather_routes.py
tests/clients/: test_google_maps.py  test_pun.py  test_youtube.py
tests/services/: test_weather_service.py
